Update docs. Fix 2016 Awards spacing

--- a/_sass/partials/media/_min-width-576.scss
+++ b/_sass/partials/media/_min-width-576.scss
@@ -187,8 +187,7 @@
   .award-title {font-weight: 700;}
 
   .award {
-    margin: 30px 0 30px;
-    margin: 30px 0;
+    margin: 35px 0;
   }
 
   .award-img {
